# scripts-and-stuff

./: README.md  changes_since_last_rosdistro.py  download-issues.py  failed_tests.py  has_version_space.py  macros.vim  time-to-first-touch.py  tomato.fish
jenkins_build_scripts/: dangitjenkins.py  fetch_job_logs.py  gazeboci_report.py  plot_build_test_times.py  plot_build_times.py  ros2ci_report.py
list_prs/: get_issues_script.py
make_repos_gist/: setup.py
make_repos_gist/make_repos_gist/: __init__.py
report_prs/: get_issues_script.py  make_markdown.py
ros1_regression_helper/: regressions_report.py
ros1_repo_graph/: setup.py
ros1_repo_graph/ros1_repo_graph/: .swp  main.py  repo_info.py
ros_release_stuff/: changelog_helpers.txt  version_bump_helper.txt
rosdistro_duty/: README.md  pyproject.toml  review_new_packages.py
rosdistro_duty/src/rosdistro_duty/: __init__.py  cli.py  credentials.py  distro_analyzer.py  github_client.py  inspector.py  reporter.py  repository.py  reviewer.py
rosdistro_duty/tests/: test_distro_analyzer.py  test_inspector.py
sync_helpers/: make_freeze_announcement.py  make_release_repos.py  make_sync_announcement.py  pick_thresholds.py  tag_rosdistro.bash  tag_rosdistro.py
sync_threshold/: pick_thresholds.py
update-maintainers/: setup.py
update-maintainers/update_maintainers/: main.py
who_maintains/: setup.py
who_maintains/who_maintains/: find.py  main.py
