[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rosdistro-duty"
version = "0.1.0"
description = "A tool for reviewing new/modified package additions in rosdistro pull requests"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "keyring>=25.0.0",
    "PyGithub>=1.56",
    "PyYAML>=6.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[project.scripts]
review-new-packages = "rosdistro_duty.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
